syntax = "proto3";

package register;

option go_package = "./proto/register";

service Register {
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
	
}

message RegisterRequest {
	string phone = 1;
	string password = 2;
}

message RegisterResponse {
	bool success = 1;
}

